k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m324-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m324-project
  template:
    metadata:
      labels:
        app: m324-project
    spec:
      containers:
        - name: m324-project
          image: pescel/m324-project:latest
          ports:
            - containerPort: 3000
