k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m324-project-service
spec:
  type: NodePort
  selector:
    app: m324-project
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
