k8s/flux-configuration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m324-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m324-project
  template:
    metadata:
      labels:
        app: m324-project
    spec:
      containers:
        - name: m324-project
          image: pescel/m324-project:latest
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m324-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: m324.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: m324-project-service
                port:
                  number: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: m324-project-service
spec:
  type: NodePort
  selector:
    app: m324-project
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
