k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m324-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: m324.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: m324-project-service
                port:
                  number: 3000
